test/message/syntactic-tail-call-in-comma.out
*%(basename)s:12: SyntaxError: Tail call expression is not allowed here
  return 1, 2, 3,   continue f() , 4  ;
                    ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
